fix add new task buttons shift on tablet size

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -5,7 +5,7 @@ $background-column-header: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.o
 
 $background-close-button: rgba(255, 0, 0, 0.4);
 
-$min-width: 320px;
+$min-width: 350px;
 $max-width: 1800px;
 
 $theme-slider-size: 30px;
